# squigit

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  VERSION  config.example.json  package-lock.json  plan.md  rust-toolchain.toml  scratch.js  scratch2.js  scratch3.js  setup.py  tailwind.config.js  task.md  test-css.js  xtask.toml
.cargo/: config.toml
app/: App.tsx  Cargo.toml  build.rs  index.html  tauri.conf.json
app/capabilities/: default.json
app/components/ui/ContextMenu/: ContextMenu.tsx
app/features/chat/: index.ts
app/features/lens/services/: lens.google.ts
app/features/onboarding/services/: releaseNotes.ts
app/lib/config/prompts/: index.ts
app/router/: AppRouter.tsx
app/src/: constants.rs  lib.rs  main.rs  state.rs  utils.rs
app/src/brain/: loader.rs  mod.rs  processor.rs
app/src/brain/prompts/: frame.md
app/src/commands/: auth.rs  capture.rs  chat.rs  clipboard.rs  constants.rs  gemini.rs  gemini_files.rs  image.rs  mod.rs  models.rs  ocr.rs  profile.rs  security.rs  sound.rs  speech.rs  theme.rs  window.rs
app/src/data/: credentials.example.json  failure.html  success.html
app/src/scripts/: global-hotkey.sh
app/src/services/: audio.rs  auth.rs  capture.rs  image.rs  mod.rs  models.rs  network.rs  security.rs  theme.rs  tray.rs  window.rs
app/src/sys/: mod.rs  monitors.rs
app/styles/: animations.css  globals.css
archive/xtask/: Cargo.toml
archive/xtask/src/: lib.rs
archive/xtask/src/commands/: build.rs  deps.rs  mod.rs  setup.rs  test.rs
archive/xtask/src/compile/: mod.rs
archive/xtask/src/tests/: check.rs  crates.rs  mod.rs  runner.rs
crates/desktop-runtime/: Cargo.toml  xtask.toml
crates/desktop-runtime/src/: audio.rs  lib.rs  media.rs  platform.rs  security.rs  sidecar.rs
crates/ffi-napi-bridge/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/ffi-napi-bridge/src/: brain.rs  lib.rs  media.rs  platform.rs  profile.rs  storage.rs  types.rs
crates/napi-bridge/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  xtask.toml
crates/napi-bridge/src/: brain.rs  harness.rs  identity.rs  lib.rs  media.rs  platform.rs  profile.rs  profile.rs.orig  profile.rs.patch  profile.rs.patch2  sidecar.rs  storage.rs  types.rs
crates/ops-chat-storage/: Cargo.toml
crates/ops-chat-storage/src/: error.rs  lib.rs  storage.rs  types.rs
crates/ops-host-runtime/: Cargo.toml
crates/ops-host-runtime/src/: audio.rs  lib.rs  media.rs  platform.rs  security.rs  sidecar.rs
crates/ops-profile-store/: Cargo.toml  build.rs
crates/ops-profile-store/examples/: live_store_harness.rs
crates/ops-profile-store/src/: auth.rs  error.rs  lib.rs  security.rs  store.rs  types.rs
crates/ops-profile-store/tests/: auth_and_security.rs
crates/ops-squigit-brain/: Cargo.toml
crates/ops-squigit-brain/examples/: live_brain_harness.rs
crates/ops-squigit-brain/src/: attachments.rs  constants.rs  events.rs  lib.rs  runtime.rs  search.rs  service.rs
crates/ops-squigit-brain/src/assets/: mod.rs
crates/ops-squigit-brain/src/context/: media.rs  mod.rs
crates/ops-squigit-brain/src/provider/: mod.rs
crates/ops-squigit-brain/src/tools/: mod.rs
crates/ops-squigit-ocr/: Cargo.toml
crates/ops-squigit-ocr/src/: ocr.rs  sidecar.rs
crates/ops-squigit-ocr/tests/: storage_parity.rs
crates/squigit-auth/: Cargo.toml  build.rs  xtask.toml
crates/squigit-auth/assets/crypto/: pub.example.pem
crates/squigit-auth/assets/oauth/: credentials.example.json  failure.html  success.html
crates/squigit-auth/examples/: live_auth_harness.rs  live_store_harness.rs  verify_artifact.rs
crates/squigit-auth/src/: auth.rs  error.rs  lib.rs  security.rs  store.rs
crates/squigit-auth/src/auth/: callback_server.rs  credentials.rs  google.rs  mod.rs  templates.rs
crates/squigit-auth/src/security/: api_keys.rs  crypto.rs  mod.rs  ota.rs
crates/squigit-auth/src/store/: atomic.rs  mod.rs  profile_store.rs
crates/squigit-auth/src/types/: mod.rs  profile.rs
crates/squigit-auth/tests/: auth_and_security.rs  auth_flow.rs  profile_store.rs  security_api_keys.rs
crates/squigit-storage/: Cargo.toml  xtask.toml
crates/squigit-storage/src/: error.rs  lib.rs  storage.rs  types.rs
crates/squigit-storage/src/cas/: mod.rs  types.rs
crates/squigit-storage/src/profile/: types.rs
crates/squigit-storage/src/profiles/: atomic.rs  mod.rs  store.rs
crates/squigit-storage/src/threads/: index.rs  lifecycle.rs  mod.rs  ocr.rs  paths.rs  ris.rs  tests.rs  types.rs
crates/squigit-stt/: Cargo.toml  xtask.toml
crates/squigit-stt/src/: state.rs
crates/sys-global-shortcut/: Cargo.toml
crates/sys-global-shortcut/src/: lib.rs  linux.rs  macos.rs  windows.rs
packaging/windows/hotkey/: Cargo.toml
packaging/windows/hotkey/src/: main.rs
sidecars/qt-capture/: Cargo.toml  Dockerfile  xtask.toml
sidecars/qt-capture/native/: CMakeLists.txt  Info.plist.in  config.h.in
sidecars/qt-capture/src/: audio_guard.rs  main.cpp  main.rs  paths.rs  qt_app.rs  single_instance.rs
sidecars/whisper-stt/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  download_models.py  xtask.toml
sidecars/whisper-stt/native/: CMakeLists.txt
sidecars/whisper-stt/src/: audio.cpp  audio.hpp  engine.rs  inference.cpp  inference.hpp  ipc.rs  main.cpp  main.rs  paths.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  components.rs  console.rs  environment.rs  error.rs  lib.rs  main.rs  registry.rs  sidecar.rs  tauri.rs  utils.rs  workspace.rs
xtask/src/commands/: build.rs  bump.rs  check.rs  clean.rs  crypto.rs  deps.rs  dev.rs  doctor.rs  live.rs  mod.rs  pkg.rs  release.rs  report.rs  setup.rs  test.rs  version.rs
xtask/src/components/: apps.rs  crates.rs  packages.rs  sidecars.rs
xtask/src/lib/: linux-deploy-qt.rs  win-deploy-qt.rs
xtask/src/registry/: discovery.rs  manifest.rs  validation.rs
xtask/src/tests/: apps.rs  check.rs  crates.rs  mod.rs  runner.rs  sidecars.rs
xtask/src/workspace/: ci.rs  crypto.rs  doctor.rs  live.rs  release.rs  setup.rs
(+2015 files in other folders)
