[workspace]
members = [
    "apps/desktop",
    "xtask",
    "crates/*",
    "sidecars/qt-capture",
    "crates/svc-speech-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "debuginfo"
panic = "abort"
