[workspace]
members = [
    # "apps/tauri",  # Frozen at v0.1.0 — built via xtask only

    "crates/*",
    "sidecars/qt-capture",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "debuginfo"
panic = "abort"
