[package]
name = "SnapLLM"
version = "1.0.0"
description = "AI and contextual analysis module for screenshot data."
authors = ["a7mddra"]
license = "Apache-2.0"
repository = "https://github.com/a7mddra/snapllm"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2.0", features = ["protocol-asset", "tray-icon"] }
tiny_http = "0.12"
url = "2.5"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls", "stream"] }
futures-util = "0.3"
bytes = "1.5"
tauri-plugin-cli = "2.2.0"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2.2.0"
base64 = "0.22.1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
dirs = "5.0"
arboard = "3.3"
parking_lot = "0.12.3"
image = "0.25.1"
mime_guess = "2.0"
opener = "0.8.3"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
webbrowser = "1.0.6"
ops-chat-storage = { path = "../crates/ops-chat-storage" }
ops-profile-store = { path = "../crates/ops-profile-store" }
tauri-plugin-dialog = "2.6.0"
clipboard-rs = "0.3.2"

svc-speech-engine = { path = "../crates/svc-speech-engine" }
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
log = "0.4"
flate2 = "1.1.9"
tar = "0.4.44"
thiserror = "2.0.18"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"
zbus = "5"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser", "winreg", "winnt", "minwindef", "impl-default"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
