[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
globset = "0.4"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[[bin]]
name = "xtask"
path = "src/main.rs"
