[package]
name = "xtask"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
globset = "0.4"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
toml_edit = "0.22"

[[bin]]
name = "xtask"
path = "src/main.rs"
