[package]
name = "xtask"
version = "0.2.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem", "rand_core", "zeroize"] }
globset = "0.4"
hex = "0.4"
rand = "0.8"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
toml = "0.8"
toml_edit = "0.22"
zeroize = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.12"

[[bin]]
name = "xtask"
path = "src/main.rs"
