[package]
name = "xtask"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5.0"
pathdiff = "0.2.3"
regex = "1.12.2"
serde_json = "1.0"
sys-info = "0.9.1"
toml_edit = "0.22"
walkdir = "2.5.0"
which = "8.0.0"
