[package]
name = "desktop-runtime"
version = "0.1.0"
edition.workspace = true

[dependencies]
image = "0.25"
arboard = "3.3"
rodio = { version = "0.20", features = ["mp3"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
squigit-memory = { path = "../squigit-memory" }
squigit-auth = { path = "../squigit-auth" }
squigit-brain = { path = "../squigit-brain" }
squigit-ocr = { path = "../squigit-ocr" }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
