[package]
name = "napi-bridge"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["desktop"]
desktop = ["desktop-runtime", "squigit-ocr"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi6", "async", "tokio_rt"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
squigit-auth = { path = "../squigit-auth" }
squigit-memory = { path = "../squigit-memory" }
squigit-brain = { path = "../squigit-brain" }
desktop-runtime = { path = "../desktop-runtime", optional = true }
squigit-ocr = { path = "../squigit-ocr", optional = true }
webbrowser = "1.2.1"

[build-dependencies]
napi-build = "2"
