[package]
name = "napi-bridge"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["desktop"]
desktop = ["desktop-runtime", "ocr-runtime"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi6", "async", "tokio_rt"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
squigit-auth = { path = "../squigit-auth" }
squigit-storage = { path = "../squigit-storage" }
squigit-brain = { path = "../squigit-brain" }
squigit-harness = { path = "../squigit-harness" }
desktop-runtime = { path = "../desktop-runtime", optional = true }
ocr-runtime = { path = "../ocr-runtime", optional = true }
webbrowser = "1.2.1"

[build-dependencies]
napi-build = "2"
