[package]
name = "ops-host-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
image = "0.25"
arboard = "3.3"
rodio = { version = "0.20", features = ["mp3"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
ops-chat-storage = { path = "../ops-chat-storage" }
ops-profile-store = { path = "../ops-profile-store" }
ops-squigit-brain = { path = "../ops-squigit-brain" }
ops-squigit-ocr = { path = "../ops-squigit-ocr" }
svc-speech-engine = { path = "../svc-speech-engine" }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
