[package]
name = "ops-profile-store"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
ops-chat-storage = { path = "../ops-chat-storage" }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
tiny_http = "0.12"
url = "2.5"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22.1"
hex = "0.4"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3.12"
serial_test = "3.2"
