[package]
name = "ops-squigit-brain"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Shared Squigit brain backend for desktop and CLI/TUI"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream", "multipart", "socks"] }
futures-util = "0.3"
regex = "1.12.3"
url = "2.5"
rand = "0.8"
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
ops-chat-storage = { path = "../ops-chat-storage" }
ops-profile-store = { path = "../ops-profile-store" }
chrono = "0.4"
iana-time-zone = "0.1"
lazy_static = "1.4.0"
log = "0.4"
mime_guess = "2.0"
webbrowser = "1.0.6"
