[package]
name = "ops-squigit-ocr"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Shared OCR/models/network runtime for Squigit renderers"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
flate2 = "1.1.9"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
tar = "0.4.44"
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
dirs = "6.0"
which = "6.0"
semver = "1.0"
ops-chat-storage = { path = "../ops-chat-storage" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.12"
