[package]
name = "squigit-stt"
version = "0.2.0"
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["process", "io-util", "sync", "rt", "macros", "time"] }
log = "0.4"
anyhow = "1.0"
