[package]
name = "sys-global-shortcut"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Cross-platform global keyboard shortcut listener"

[dependencies]
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "sync"] }
futures-lite = "2"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
