[package]
name = "capture-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capture-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
sys-display-hotplug = { path = "../../crates/sys-display-hotplug" }
sys-single-instance = { path = "../../crates/sys-single-instance" }
sys-shutter-suppressor = { path = "../../crates/sys-shutter-suppressor" }
ops-chat-storage = { path = "../../crates/ops-chat-storage" }
