[package]
name = "capture-engine"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "capture-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
fs2 = "0.4"
squigit-memory = { path = "../../crates/squigit-memory" }
squigit-auth = { path = "../../crates/squigit-auth" }
dirs = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi"] }
